# good-theatre-engine-archived

./: README.md  pyproject.toml
docs/: adapters.md  architecture.md  matrix_runner.md  operators.md  phase_matrix.md  qlab.md  replay.md  run.md  zigbee.md
src/: analyse.py  default_show.py  dimension_driver.py  main.py  matrix_runner.py  osc_listener.py  performance.py  performance_config.py  performance_matrix.py  qlab.py  replay.py  supervisor.py
src/adapters/: mqtt_adapter.py
src/adapters/inputs/: __init__.py  base.py  keyboard.py  mock.py  osc.py  zigbee.py  zigbee_sensor_model.py
src/adapters/inputs/real/: motion.py
src/adapters/outputs/: __init__.py  base.py  mock.py  osc.py
src/adapters/outputs/real/: base.py  dmx.py  midi.py
src/ai/: decision.py  pattern_learner.py  prompt_builder.py  prompts.py  triads.py
src/core/: bus.py  error_log.py  interface.py  knowledge.py  message.py
src/cues/: __init__.py  builder.py  examples.py  runner.py
src/operators/: cli.py  dashboard.py
tests/: test_adapters.py  test_bus.py  test_cues.py  test_dashboard.py  test_decision.py  test_dimension_driver.py  test_error_log.py  test_interface.py  test_knowledge.py  test_matrix_runner.py  test_message.py  test_new_adapters.py  test_osc_input.py  test_osc_listener.py  test_pattern_learner.py  test_performance.py  test_performance_matrix.py  test_qlab.py  test_replay.py  test_supervisor.py  test_zigbee.py
tests/integration/: test_cue_performance.py
